refactor: simplify test setup to one broker and avoid using waitUntil